log
Sat Apr  9 21:30:43 HSP 2022: 
 tests:  0|6
total_score: 0/70
0ad1bf2
Sun Apr 10 18:48:54 HSP 2022: 
 tests:  0|6
total_score: 0/70
24732a8
Sun Apr 10 18:49:34 HSP 2022: 
 tests:  0|6
total_score: 0/70
a2c111d
Sun Apr 10 18:50:13 HSP 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d0f83f4
Sun Apr 10 19:27:15 HSP 2022: 
 tests:  1|5
total_score: 10/70
8aef015
Sun Apr 10 19:31:17 HSP 2022: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8b5fc6d
Sun Apr 10 19:31:23 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
05734e4
Sun Apr 10 19:31:32 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
809d712
Sun Apr 10 19:31:40 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
85ea26e
Sun Apr 10 19:32:13 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ade5ce4
Sun Apr 10 19:32:22 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3334ef8
